--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <script type="module">
-  import init, {hello} from './pkg/game_2048.js'
+  import init, {hello, GameBoard} from './pkg/game_2048.js'
 
-  await init();
-  const msg = hello();
-  console.log(msg);
+  async function run() {
+
+    await init();
+    await init2();
+    const msg = hello();
+    console.log(msg);
+  }
+  run();
+
 </script>
 
 <body>
